--- a/public/css/output.css
+++ b/public/css/output.css
@@ -4025,10 +4025,6 @@ details.collapse summary::-webkit-details-marker {
   overflow: visible;
 }
 
-.rounded-3xl {
-  border-radius: 1.5rem;
-}
-
 .rounded-full {
   border-radius: 9999px;
 }
@@ -4073,8 +4069,8 @@ details.collapse summary::-webkit-details-marker {
   border-width: 0px;
 }
 
-.border-none {
-  border-style: none;
+.border-2 {
+  border-width: 2px;
 }
 
 .border-blue-600 {
@@ -4172,12 +4168,6 @@ details.collapse summary::-webkit-details-marker {
 
 .bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
-}
-
-.from-pink-200 {
-  --tw-gradient-from: #FAD1E8 var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(250 209 232 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
 .from-purple-200 {
@@ -4606,7 +4596,7 @@ details.collapse summary::-webkit-details-marker {
   }
 
   50% {
-    background-position: 100% 100%;
+    background-position: 100% 0%;
   }
 
   100% {
@@ -4617,7 +4607,6 @@ details.collapse summary::-webkit-details-marker {
 .animated-gradient {
   background: rgb(233, 110, 252);
   background: linear-gradient(35deg, rgb(255, 255, 255) 0%, rgb(255, 145, 207) 100%);
-  background-size: 400% 400%;
   animation: gradientAnimation 2s ease-in infinite;
 }
 
@@ -4635,11 +4624,11 @@ a .borde {
 .fondoGradiente {
   --x-0: 82%;
   --y-0: 1%;
-  --c-0: hsla(249, 53%, 89%, 0);
+  --c-0: hsla(324, 100%, 80%, 0.104);
   --c-1: hsla(323, 100%, 80%, 0.899);
   --y-1: 0%;
   --x-1: 0%;
-  --c-2: hsla(0, 0%, 0%, 0.67);
+  --c-2: hsla(273, 100%, 77%, 0.262);
   --x-2: 92%;
   --y-2: 11%;
   --x-3: 86%;
@@ -4923,10 +4912,26 @@ a .borde {
   background-blend-mode:normal,normal,normal,normal,normal;
 }
 
+.botonLavanda{
+  background-image: 
+    linear-gradient(35deg, rgba(224, 161, 255, 0.216) 0%, rgba(0, 0, 0, 0.374) 100%),
+    url('../../public/assets/images/lavanda1.jpg');
+  background-size: 100% 100%, cover;
+  /* El degradado se anima, la imagen permanece fija */
+  background-position: 0% 50%, end;
+  /* Solo el degradado se moverá */
+  background-blend-mode: normal;
+  border: groove;
+}
+
 .hover\:scale-105:hover {
   --tw-scale-x: 1.05;
   --tw-scale-y: 1.05;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:border-2:hover {
+  border-width: 2px;
 }
 
 .hover\:border-gray-300:hover {
