--- a/src/css/input.css
+++ b/src/css/input.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
+
 .slide {
     @apply absolute inset-0 w-full h-full object-contain transition-all duration-1000 bg-transparent ease-in;
     opacity: 0;
@@ -60,10 +67,10 @@ a .borde {
     --x-0: 82%;
     --y-0: 1%;
     --c-0: hsla(324, 100%, 80%, 0.104);
-    --c-1: hsla(323, 100%, 80%, 0.899);
+    --c-1: hsla(323, 100%, 80%, 0.184);
     --y-1: 0%;
     --x-1: 0%;
-    --c-2: hsla(273, 100%, 77%, 0.262);
+    --c-2: hsla(273, 100%, 77%, 0.134);
     --x-2: 92%;
     --y-2: 11%;
     --x-3: 86%;
@@ -73,7 +80,7 @@ a .borde {
     --y-4: 67%;
     --c-4: hsla(247, 58%, 97%, 0);
     ;
-    background-color: hsla(279, 100%, 84%, 0.481);
+    background-color: hsla(279, 100%, 77%, 0.134);
     background-image: radial-gradient(circle at var(--x-0) var(--y-0), var(--c-0) var(--s-start-0), transparent var(--s-end-0)), radial-gradient(circle at var(--x-1) var(--y-1), var(--c-1) var(--s-start-1), transparent var(--s-end-1)), radial-gradient(circle at var(--x-2) var(--y-2), var(--c-2) var(--s-start-2), transparent var(--s-end-2)), radial-gradient(circle at var(--x-3) var(--y-3), var(--c-3) var(--s-start-3), transparent var(--s-end-3)), radial-gradient(circle at var(--x-4) var(--y-4), var(--c-4) var(--s-start-4), transparent var(--s-end-4));
     animation: hero-gradient-animation 10s linear infinite alternate;
     background-blend-mode: normal, normal, normal, normal, normal;
@@ -83,11 +90,51 @@ a .borde {
 
 .botonLavanda{
     background-image: 
-    linear-gradient(35deg, rgba(183, 39, 255, 0.171) 0%, rgba(179, 28, 255, 0.155) 100%),
+    linear-gradient(35deg, rgba(0, 0, 0, 0.185) 0%, rgba(195, 111, 255, 0.066) 100%),
     url('../../public/assets/images/lavanda2.jpg');
     background-size: 100% 100%, cover; /* El degradado se anima, la imagen permanece fija */
     background-position: 0% 50%, end; /* Solo el degradado se moverá */
     background-blend-mode: normal;
     border: solid;
+}
 
+.botonLavanda2{
+    background-image: 
+    linear-gradient(360deg, rgba(55, 0, 67, 0.666) 0%, rgba(230, 193, 255, 0.644) 100%),
+    url('../../public/assets/images/lavanda2.jpg');
+    background-size: 100% 100%, cover; /* El degradado se anima, la imagen permanece fija */
+    background-position: 0% 50%, end; /* Solo el degradado se moverá */
+    background-blend-mode: normal;
+    border: solid;
+}
+
+.botonClaro{
+    background-image: 
+    linear-gradient(360deg, rgba(100, 0, 122, 0.373) 0%, rgba(255, 255, 255, 0.488) 100%),
+    url('../../public/assets/images/lavanda2.jpg');
+}
+
+/* Puedes agregar estos estilos a tu archivo CSS */
+.pagination-arrow {
+    cursor: pointer;
+    transition: opacity 0.3s;
+}
+
+.pagination-arrow[disabled] {
+    opacity: 0.5;
+    cursor: not-allowed;
+}
+
+.loader {
+    border: 8px solid #f3f3f356; /* Color del fondo */
+    border-top: 8px solid #af53ff; /* Color del spinner */
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
