--- a/src/css/input.css
+++ b/src/css/input.css
@@ -89,6 +89,21 @@ a .borde {
     url('../../public/assets/images/lavanda2.jpg');
 }
 
+.fondoProductos {
+    background: 
+        linear-gradient(
+            rgba(255, 148, 218, 0.218), /* Color del gradiente con opacidad */
+            rgba(251, 200, 229, 0.5)  /* Color del gradiente con opacidad */
+        ), 
+        url('../../public/assets/images/fondoProductos.png'); /* Reemplaza con la ruta de tu imagen */
+    
+    background-size: cover; /* Ajusta el tamaño de la imagen para cubrir todo el contenedor */
+    background-position: center; /* Centra la imagen en el contenedor */
+    background-repeat: no-repeat; /* Evita que la imagen se repita */
+    /* Opcional: Añade otros estilos según necesites */
+    background-blend-mode:;
+}
+
 /* Puedes agregar estos estilos a tu archivo CSS */
 .pagination-arrow {
     cursor: pointer;
