--- a/src/css/input.css
+++ b/src/css/input.css
@@ -95,24 +95,26 @@ a .borde {
     transition: opacity 0.3s;
 }
 
-.pagination-arrow[disabled] {
+.disabled {
     opacity: 0.5;
     cursor: not-allowed;
 }
 
 .loader {
-    border: 8px solid #f3f3f356; /* Color del fondo */
-    border-top: 8px solid #af53ff; /* Color del spinner */
+    border: 8px solid #ffffff4b; /* Color del fondo */
+    border-top: 8px solid #7834b4ab; /* Color del spinner */
     border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    animation: spin 1s linear infinite;
+    width: 60px;
+    height: 60px;
+    animation: spin 1s cubic-bezier(0.785, 0.135, 0.15, 0.86) infinite;
+    filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, 0.629));
 }
 
 @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
+
 
 .sombraInset{
     box-shadow: rgba(77, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(41, 0, 77, 0.297) 0px 18px 36px -18px inset;
@@ -174,3 +176,4 @@ a .borde {
 .tamañoSugerencia{
     width: calc(100% - 40px);
 }
+
