--- a/public/css/output.css
+++ b/public/css/output.css
@@ -3764,54 +3764,6 @@ details.collapse summary::-webkit-details-marker {
   top: 25%;
 }
 
-.top-10 {
-  top: 2.5rem;
-}
-
-.bottom-10 {
-  bottom: 2.5rem;
-}
-
-.bottom-20 {
-  bottom: 5rem;
-}
-
-.bottom-1 {
-  bottom: 0.25rem;
-}
-
-.bottom-16 {
-  bottom: 4rem;
-}
-
-.bottom-1\/2 {
-  bottom: 50%;
-}
-
-.bottom-1\/3 {
-  bottom: 33.333333%;
-}
-
-.bottom-1\/4 {
-  bottom: 25%;
-}
-
-.top-1\/3 {
-  top: 33.333333%;
-}
-
-.-bottom-1\/3 {
-  bottom: -33.333333%;
-}
-
-.bottom-2\/3 {
-  bottom: 66.666667%;
-}
-
-.bottom-14 {
-  bottom: 3.5rem;
-}
-
 .-z-0 {
   z-index: 0;
 }
@@ -3842,6 +3794,14 @@ details.collapse summary::-webkit-details-marker {
 
 .m-2 {
   margin: 0.5rem;
+}
+
+.m-5 {
+  margin: 1.25rem;
+}
+
+.m-3 {
+  margin: 0.75rem;
 }
 
 .mx-1 {
@@ -3894,12 +3854,12 @@ details.collapse summary::-webkit-details-marker {
   margin-top: 1rem;
 }
 
-.mt-7 {
-  margin-top: 1.75rem;
-}
-
 .mt-5 {
   margin-top: 1.25rem;
+}
+
+.mt-7 {
+  margin-top: 1.75rem;
 }
 
 .block {
@@ -3936,6 +3896,10 @@ details.collapse summary::-webkit-details-marker {
 
 .h-10 {
   height: 2.5rem;
+}
+
+.h-2\/3 {
+  height: 66.666667%;
 }
 
 .h-3 {
@@ -3978,23 +3942,6 @@ details.collapse summary::-webkit-details-marker {
   height: 100vh;
 }
 
-.h-1\/2 {
-  height: 50%;
-}
-
-.h-1\/3 {
-  height: 33.333333%;
-}
-
-.h-2\/3 {
-  height: 66.666667%;
-}
-
-.h-fit {
-  height: -moz-fit-content;
-  height: fit-content;
-}
-
 .w-0 {
   width: 0px;
 }
@@ -4009,6 +3956,10 @@ details.collapse summary::-webkit-details-marker {
 
 .w-10 {
   width: 2.5rem;
+}
+
+.w-11\/12 {
+  width: 91.666667%;
 }
 
 .w-3 {
@@ -4040,12 +3991,8 @@ details.collapse summary::-webkit-details-marker {
   width: 100%;
 }
 
-.w-11\/12 {
-  width: 91.666667%;
-}
-
-.w-auto {
-  width: auto;
+.max-w-5xl {
+  max-width: 64rem;
 }
 
 .max-w-fit {
@@ -4059,10 +4006,6 @@ details.collapse summary::-webkit-details-marker {
 
 .max-w-screen-xl {
   max-width: 1280px;
-}
-
-.max-w-5xl {
-  max-width: 64rem;
 }
 
 .flex-1 {
@@ -4216,10 +4159,6 @@ details.collapse summary::-webkit-details-marker {
   overflow: visible;
 }
 
-.rounded {
-  border-radius: 0.25rem;
-}
-
 .rounded-full {
   border-radius: 9999px;
 }
@@ -4256,58 +4195,12 @@ details.collapse summary::-webkit-details-marker {
   border-end-start-radius: 0.5rem;
 }
 
-.rounded-t-xl {
-  border-top-left-radius: 0.75rem;
-  border-top-right-radius: 0.75rem;
-}
-
-.rounded-t-full {
-  border-top-left-radius: 9999px;
-  border-top-right-radius: 9999px;
-}
-
-.rounded-t-badge {
-  border-top-left-radius: var(--rounded-badge, 1.9rem);
-  border-top-right-radius: var(--rounded-badge, 1.9rem);
-}
-
-.rounded-t-btn {
-  border-top-left-radius: var(--rounded-btn, 0.5rem);
-  border-top-right-radius: var(--rounded-btn, 0.5rem);
-}
-
-.rounded-t-box {
-  border-top-left-radius: var(--rounded-box, 1rem);
-  border-top-right-radius: var(--rounded-box, 1rem);
-}
-
-.rounded-t-3xl {
-  border-top-left-radius: 1.5rem;
-  border-top-right-radius: 1.5rem;
-}
-
-.rounded-tl {
-  border-top-left-radius: 0.25rem;
-}
-
-.rounded-tl-full {
-  border-top-left-radius: 9999px;
+.rounded-br-3xl {
+  border-bottom-right-radius: 1.5rem;
 }
 
 .rounded-tl-3xl {
   border-top-left-radius: 1.5rem;
-}
-
-.rounded-tl-badge {
-  border-top-left-radius: var(--rounded-badge, 1.9rem);
-}
-
-.rounded-bl-3xl {
-  border-bottom-left-radius: 1.5rem;
-}
-
-.rounded-br-3xl {
-  border-bottom-right-radius: 1.5rem;
 }
 
 .border {
@@ -4320,26 +4213,6 @@ details.collapse summary::-webkit-details-marker {
 
 .border-2 {
   border-width: 2px;
-}
-
-.border-x {
-  border-left-width: 1px;
-  border-right-width: 1px;
-}
-
-.border-y {
-  border-top-width: 1px;
-  border-bottom-width: 1px;
-}
-
-.border-y-0 {
-  border-top-width: 0px;
-  border-bottom-width: 0px;
-}
-
-.border-y-8 {
-  border-top-width: 8px;
-  border-bottom-width: 8px;
 }
 
 .border-blue-600 {
@@ -4370,16 +4243,6 @@ details.collapse summary::-webkit-details-marker {
 .border-gray-50 {
   --tw-border-opacity: 1;
   border-color: rgb(249 250 251 / var(--tw-border-opacity));
-}
-
-.border-black {
-  --tw-border-opacity: 1;
-  border-color: rgb(0 0 0 / var(--tw-border-opacity));
-}
-
-.border-white {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
 .\!bg-gray-50 {
@@ -4434,30 +4297,12 @@ details.collapse summary::-webkit-details-marker {
   background-color: rgb(255 255 255 / 0.5);
 }
 
-.bg-red-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(253 232 232 / var(--tw-bg-opacity));
-}
-
-.bg-purple-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(202 191 253 / var(--tw-bg-opacity));
-}
-
 .bg-opacity-10 {
   --tw-bg-opacity: 0.1;
 }
 
 .bg-opacity-20 {
   --tw-bg-opacity: 0.2;
-}
-
-.bg-opacity-50 {
-  --tw-bg-opacity: 0.5;
-}
-
-.bg-opacity-25 {
-  --tw-bg-opacity: 0.25;
 }
 
 .bg-gradient-to-r {
@@ -4493,10 +4338,6 @@ details.collapse summary::-webkit-details-marker {
 
 .p-4 {
   padding: 1rem;
-}
-
-.p-5 {
-  padding: 1.25rem;
 }
 
 .px-0 {
@@ -4557,8 +4398,16 @@ details.collapse summary::-webkit-details-marker {
   padding-right: 0.5rem;
 }
 
+.pr-8 {
+  padding-right: 2rem;
+}
+
 .pt-2 {
   padding-top: 0.5rem;
+}
+
+.pr-3 {
+  padding-right: 0.75rem;
 }
 
 .text-center {
@@ -4567,6 +4416,10 @@ details.collapse summary::-webkit-details-marker {
 
 .text-start {
   text-align: start;
+}
+
+.text-end {
+  text-align: end;
 }
 
 .font-poppins {
@@ -4580,6 +4433,11 @@ details.collapse summary::-webkit-details-marker {
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .text-4xl {
@@ -4615,11 +4473,6 @@ details.collapse summary::-webkit-details-marker {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
 }
 
 .font-bold {
@@ -4690,11 +4543,6 @@ details.collapse summary::-webkit-details-marker {
 .text-gray-500 {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
-}
-
-.text-gray-600 {
-  --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 
 .text-gray-800 {
@@ -4895,6 +4743,10 @@ html, body {
   background: linear-gradient(35deg, rgba(0, 0, 0, 0.316) 0%, rgba(233, 179, 254, 0.371) 100%);
 }
 
+.sombraTop{
+  box-shadow: rgba(0, 0, 0, 0.471) 0px 25px 20px 25px;
+}
+
 a.activo .borde {
   width: 100%;
   left: 0;
@@ -4911,9 +4763,7 @@ a .borde {
     linear-gradient(35deg, rgba(0, 0, 0, 0.185) 0%, rgba(195, 111, 255, 0.066) 100%),
     url('../../public/assets/images/lavanda2.jpg');
   background-size: 100% 100%, cover;
-  /* El degradado se anima, la imagen permanece fija */
   background-position: 0% 50%, end;
-  /* Solo el degradado se moverá */
   background-blend-mode: normal;
   border: solid;
   box-shadow: rgba(77, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(41, 0, 77, 0.407) 0px 18px 36px -18px inset;
@@ -4924,9 +4774,7 @@ a .borde {
     linear-gradient(360deg, rgba(55, 0, 67, 0.666) 0%, rgba(230, 193, 255, 0.644) 100%),
     url('../../public/assets/images/lavanda2.jpg');
   background-size: 100% 100%, cover;
-  /* El degradado se anima, la imagen permanece fija */
   background-position: 0% 50%, end;
-  /* Solo el degradado se moverá */
   background-blend-mode: normal;
   border: solid;
 }
@@ -4940,21 +4788,14 @@ a .borde {
 .fondoProductos {
   background: 
         linear-gradient(
-            rgba(44, 0, 73, 0.255), /* Color del gradiente con opacidad */
-            rgba(255, 212, 236, 0.522)  /* Color del gradiente con opacidad */
+            rgba(44, 0, 73, 0.255),
+            rgba(255, 212, 236, 0.522) 
         ), 
         url('../../public/assets/images/fondoProductos.png');
-  /* Reemplaza con la ruta de tu imagen */
   background-size: cover;
-  /* Ajusta el tamaño de la imagen para cubrir todo el contenedor */
   background-position: center;
-  /* Centra la imagen en el contenedor */
   background-repeat: no-repeat;
-  /* Evita que la imagen se repita */
-  /* Opcional: Añade otros estilos según necesites */
 }
-
-/* Puedes agregar estos estilos a tu archivo CSS */
 
 .pagination-arrow {
   cursor: pointer;
@@ -4968,9 +4809,7 @@ a .borde {
 
 .loader {
   border: 8px solid #ffffff4b;
-  /* Color del fondo */
   border-top: 8px solid #7834b4ab;
-  /* Color del spinner */
   border-radius: 50%;
   width: 60px;
   height: 60px;
@@ -5016,6 +4855,20 @@ a .borde {
   color: transparent;
 }
 
+.itemFondo{
+  background: 
+        linear-gradient(
+            rgba(0, 0, 0, 0.063),
+            rgba(255, 255, 255, 0) 
+        ), 
+        url('../../public/assets/images/podioProducto2.png');
+  background-size:contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-blend-mode:overlay;
+  filter: drop-shadow(3px 3px 10px rgba(0, 0, 0, 0.471));
+}
+
 .suggestion-item{
   padding: 6px;
   border-radius: 5px;
@@ -5044,7 +4897,6 @@ a .borde {
 
 #search-input:focus {
   box-shadow: none;
-  /* Asegura que no haya sombra alrededor del input */
   border-color: white;
 }
 
@@ -5104,30 +4956,6 @@ a .borde {
 
 .hover\:bg-opacity-5:hover {
   --tw-bg-opacity: 0.05;
-}
-
-.hover\:bg-opacity-50:hover {
-  --tw-bg-opacity: 0.5;
-}
-
-.hover\:bg-opacity-80:hover {
-  --tw-bg-opacity: 0.8;
-}
-
-.hover\:bg-opacity-85:hover {
-  --tw-bg-opacity: 0.85;
-}
-
-.hover\:bg-opacity-90:hover {
-  --tw-bg-opacity: 0.9;
-}
-
-.hover\:bg-opacity-30:hover {
-  --tw-bg-opacity: 0.3;
-}
-
-.hover\:bg-opacity-20:hover {
-  --tw-bg-opacity: 0.2;
 }
 
 .hover\:text-blue-600:hover {
@@ -5431,9 +5259,30 @@ a .borde {
     padding-right: 0.75rem;
   }
 
+  .md\:pr-5 {
+    padding-right: 1.25rem;
+  }
+
+  .md\:pr-6 {
+    padding-right: 1.5rem;
+  }
+
+  .md\:pr-60 {
+    padding-right: 15rem;
+  }
+
+  .md\:pr-9 {
+    padding-right: 2.25rem;
+  }
+
   .md\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
+  }
+
+  .md\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 
   .md\:text-5xl {
@@ -5454,16 +5303,6 @@ a .borde {
   .md\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
-  }
-
-  .md\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-  }
-
-  .md\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
   }
 
   .md\:shadow-none {
@@ -5606,6 +5445,15 @@ a .borde {
     padding-right: 1rem;
   }
 
+  .xl\:pr-8 {
+    padding-right: 2rem;
+  }
+
+  .xl\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
   .xl\:text-3xl {
     font-size: 1.875rem;
     line-height: 2.25rem;
@@ -5634,11 +5482,6 @@ a .borde {
   .xl\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
-  }
-
-  .xl\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
   }
 
   .xl\:shadow-none {
