--- a/src/css/input.css
+++ b/src/css/input.css
@@ -37,6 +37,10 @@ html, body {
     background: linear-gradient(35deg, rgba(0, 0, 0, 0.316) 0%, rgba(233, 179, 254, 0.371) 100%);
 }
 
+.sombraTop{
+    box-shadow: rgba(0, 0, 0, 0.471) 0px 25px 20px 25px;
+}
+
 a.activo .borde {
     width: 100%; 
     left: 0; 
@@ -52,8 +56,8 @@ a .borde {
     background-image: 
     linear-gradient(35deg, rgba(0, 0, 0, 0.185) 0%, rgba(195, 111, 255, 0.066) 100%),
     url('../../public/assets/images/lavanda2.jpg');
-    background-size: 100% 100%, cover; /* El degradado se anima, la imagen permanece fija */
-    background-position: 0% 50%, end; /* Solo el degradado se moverá */
+    background-size: 100% 100%, cover;
+    background-position: 0% 50%, end;
     background-blend-mode: normal;
     border: solid;
     box-shadow: rgba(77, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(41, 0, 77, 0.407) 0px 18px 36px -18px inset;
@@ -63,8 +67,8 @@ a .borde {
     background-image: 
     linear-gradient(360deg, rgba(55, 0, 67, 0.666) 0%, rgba(230, 193, 255, 0.644) 100%),
     url('../../public/assets/images/lavanda2.jpg');
-    background-size: 100% 100%, cover; /* El degradado se anima, la imagen permanece fija */
-    background-position: 0% 50%, end; /* Solo el degradado se moverá */
+    background-size: 100% 100%, cover; 
+    background-position: 0% 50%, end; 
     background-blend-mode: normal;
     border: solid;
 }
@@ -78,18 +82,16 @@ a .borde {
 .fondoProductos {
     background: 
         linear-gradient(
-            rgba(44, 0, 73, 0.255), /* Color del gradiente con opacidad */
-            rgba(255, 212, 236, 0.522)  /* Color del gradiente con opacidad */
+            rgba(44, 0, 73, 0.255),
+            rgba(255, 212, 236, 0.522) 
         ), 
-        url('../../public/assets/images/fondoProductos.png'); /* Reemplaza con la ruta de tu imagen */
+        url('../../public/assets/images/fondoProductos.png'); 
     
-    background-size: cover; /* Ajusta el tamaño de la imagen para cubrir todo el contenedor */
-    background-position: center; /* Centra la imagen en el contenedor */
-    background-repeat: no-repeat; /* Evita que la imagen se repita */
-    /* Opcional: Añade otros estilos según necesites */
+    background-size: cover; 
+    background-position: center; 
+    background-repeat: no-repeat; 
 }
 
-/* Puedes agregar estos estilos a tu archivo CSS */
 .pagination-arrow {
     cursor: pointer;
     transition: opacity 0.3s;
@@ -101,8 +103,8 @@ a .borde {
 }
 
 .loader {
-    border: 8px solid #ffffff4b; /* Color del fondo */
-    border-top: 8px solid #7834b4ab; /* Color del spinner */
+    border: 8px solid #ffffff4b; 
+    border-top: 8px solid #7834b4ab;
     border-radius: 50%;
     width: 60px;
     height: 60px;
@@ -144,6 +146,21 @@ a .borde {
     color: transparent;
 }
 
+.itemFondo{
+    background: 
+        linear-gradient(
+            rgba(0, 0, 0, 0.063),
+            rgba(255, 255, 255, 0) 
+        ), 
+        url('../../public/assets/images/podioProducto2.png'); 
+    
+    background-size:contain; 
+    background-position: center; 
+    background-repeat: no-repeat; 
+    background-blend-mode:overlay;
+    filter: drop-shadow(3px 3px 10px rgba(0, 0, 0, 0.471));
+}
+
 .suggestion-item{
     padding: 6px;
     border-radius: 5px;
@@ -169,7 +186,7 @@ a .borde {
 }
 
 #search-input:focus {
-    box-shadow: none; /* Asegura que no haya sombra alrededor del input */
+    box-shadow: none;
     border-color: white;
 }
 
