--- a/public/css/output.css
+++ b/public/css/output.css
@@ -4410,6 +4410,10 @@ details.collapse summary::-webkit-details-marker {
   padding-right: 0.75rem;
 }
 
+.pr-4 {
+  padding-right: 1rem;
+}
+
 .text-center {
   text-align: center;
 }
